--- a/app/views/header.htm
+++ b/app/views/header.htm
@@ -10,6 +10,8 @@
 		<link href="../../ui/css/datepicker.css" rel="stylesheet" media="screen">
         <link href="../../ui/css/crud.css" rel="stylesheet" media="screen">
         <link href="../../ui/css/custom.css" rel="stylesheet" media="screen">
+
+        <link rel="icon" type="image/x-icon" href="../../ui/img/favicon.ico">
 		
 	    <!-- Just for debugging purposes. Don't actually copy this line! -->
 	    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
