hide sums for presents category

--- a/app/views/flow/list_paged.htm
+++ b/app/views/flow/list_paged.htm
@@ -1,5 +1,5 @@
 <include href="category/filter.htm" />
-<br />	
+<br />
 <table width="600" cellpadding="5" class="table table-hover table-bordered">
     <thead>
     <tr>
@@ -16,19 +16,30 @@
 
     <tbody>
 	    <repeat group="{{ @flows.subset }}" value="{{ @flow }}">
-			<check if='{{ @flow.category_id != 10000}}'> <!-- скрываем из общего списка категорию подарки //HOLYAN: != 10 -->
+
 	        <tr <check if='{{ @flow.type == 1 }}'>class="success"</check>>
 	            <td>{{ trim(@flow.date) }}</td>
 	            <td>{{ trim(@flow.comment) }}</td>
-	            <td>{{ trim(@flow.currency_sum) }} {{ @currencies->retById(@flow.currency_id)->name}}</td>
-	            <td>{{ trim(@flow.sum) }}</td>
+	            <td>
+                <!-- скрываем из списка сумму из категории подарки -->
+                <check if='{{ @flow.category_id == 10}}'>
+                  <true>:)</true>
+                  <false>{{ trim(@flow.currency_sum) }} {{ @currencies->retById(@flow.currency_id)->name}}</false>
+                </check>
+              </td>
+	            <td>
+                <check if='{{ @flow.category_id == 10}}'>
+                  <true>:)</true>
+                  <false>{{ trim(@flow.sum) }}</false>
+                </check>
+              </td>
 	            <td>{{ @categories->retById(@flow.category_id)->name}}</td>
 	            <td>{{ @wallets->retById(@flow.wallet_id)->name}}</td>
 	            <!-- <td>{{ trim(@flow.account_id) }}</td> -->
 	            <td><a href="{{ @BASE.'/flow/update/'. @flow.id }}" class="btn btn-primary btn-xs"><i class="glyphicon glyphicon-edit"></i></a>
 	                &nbsp; <a href="{{ @BASE.'/flow/delete/'. @flow.id }}" class="btn btn-danger btn-xs"><i class="glyphicon glyphicon-trash"></i></a></td>
 	        </tr>
-			</check>
+
 	    </repeat>
     </tbody>
 
@@ -36,15 +47,15 @@
 
 
 	  <ul class="pagination">
-  
-<check if="isset(@pages[@list.pos-1])"> 
+
+<check if="isset(@pages[@list.pos-1])">
 	    <li><a rel="{{@list.pos-1}}" href="{{ @pages[@list.pos-1]['link']}}">Пред</a></li>
-</check>	
+</check>
 		<repeat group="{{ @pages }}" value="{{ @item  }}">
 			<li class="<check if='{{ @item.active == 1 }}'>active</check>"><a rel="{{ @item.count - 1 }}" href="{{ @item.link }}">{{ @item.count }}</a></li>
 		</repeat>
-<check if="isset(@pages[@list.pos+1])"> 
+<check if="isset(@pages[@list.pos+1])">
 	    <li><a rel="{{@list.pos+1}}" href="{{ @pages[@list.pos+1]['link']}}">След</a></li>
-</check>			
+</check>
 
 	  </ul>
